syntax = "proto3";

package service;

option go_package = ".;rpc";

service electionService {
    rpc Election(ElectionRequest) returns (ElectionReply) {}
    rpc Heart(HeartRequest) returns (HeartReply) {}
    rpc Append(AppendEntryRequest) returns (AppendEntryReply) {}
}


message ElectionRequest {
    string node_id = 1;
    uint32 term = 2;
    uint32 index = 3;
}

message ElectionReply {
    bool accept = 1;
    string node_id = 2;
    uint32 term = 3;
    uint32 index = 4;
}

message HeartRequest {
    string from = 1;
    uint32 term = 2;
    uint32 commit_index = 3;
}
message HeartReply {
    uint32 commit_index = 1;
}

message Entry {
    uint32 term = 1;
    uint32 index = 2;
    string value = 4;
}
message AppendEntryRequest {
    Entry entry = 1;
    uint32 pre_term = 2;
    uint32 pre_index = 3;
    uint32 commit_index = 4;
    string from = 5;
}
message AppendEntryReply {
    bool accept = 1;
    uint32 append_index = 2;
    uint32 commit_index = 3;
}

service DBService {
    rpc DBAppend(DBAppendLogRequest) returns (DBAppendLogReply) {}
}

message DBAppendLogRequest{
    string log = 1;
}
message DBAppendLogReply{
    int32 ret = 1;
}
